Add admin, breeds, groups, and more (#1)
