# swagger/v2/swagger.json
@@ -15,13 +15,109 @@
   },
   "servers": [
     {
-      "url": "https://dogapi.dog/api/v2"
+      "url": "http://localhost:3000/api/v2"
     }
   ],
   "paths": {
+    "/breeds": {
+      "get": {
+        "summary": "list breeds",
+        "tags": [
+          "Breeds"
+        ],
+        "responses": {
+          "200": {
+            "description": "successful",
+            "content": {
+              "application/json": {
+                "examples": {
+                  "example": {
+                    "value": {
+                      "data": [
+                        {
+                          "id": "f9643a80-af1d-422a-9f15-18d466822053",
+                          "type": "breed",
+                          "attributes": {
+                            "name": "Caucasian Shepherd Dog",
+                            "description": "The Caucasian Shepherd dog is a serious guardian breed and should never be taken lightly. "
+                          }
+                        },
+                        {
+                          "id": "dc5e84f8-9151-4624-836c-25b4e313118b",
+                          "type": "breed",
+                          "attributes": {
+                            "name": "Bouvier des Flandres",
+                            "description": "They don't build 'em like this anymore."
+                          }
+                        }
+                      ],
+                      "links": {
+                        "self": "https://dogapi.dog/api/v2/breeds",
+                        "current": "https://dogapi.dog/api/v2/breeds?page[number]=1",
+                        "next": "https://dogapi.dog/api/v2/breeds?page[number]=2",
+                        "last": "https://dogapi.dog/api/v2/breeds?page[number]=2"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/breeds/{id}": {
+      "get": {
+        "summary": "get breed",
+        "tags": [
+          "Breeds"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful",
+            "content": {
+              "application/json": {
+                "examples": {
+                  "example": {
+                    "value": {
+                      "data": {
+                        "id": "f9643a80-af1d-422a-9f15-18d466822053",
+                        "type": "breed",
+                        "attributes": {
+                          "name": "Caucasian Shepherd Dog",
+                          "min_life": 15,
+                          "max_life": 20,
+                          "description": "The Caucasian Shepherd dog is a serious guardian breed and should never be taken lightly."
+                        }
+                      },
+                      "links": {
+                        "self": "https://dogapi.dog/api/v2/breeds/f9643a80-af1d-422a-9f15-18d466822053"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/facts": {
       "get": {
         "summary": "list facts",
+        "tags": [
+          "Facts"
+        ],
         "parameters": [
           {
             "name": "limit",
@@ -49,6 +145,136 @@
                           }
                         }
                       ]
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/groups": {
+      "get": {
+        "summary": "list groups",
+        "tags": [
+          "Groups"
+        ],
+        "responses": {
+          "200": {
+            "description": "successful",
+            "content": {
+              "application/json": {
+                "examples": {
+                  "example": {
+                    "value": {
+                      "data": [
+                        {
+                          "id": "02124eb6-1baa-410c-90ea-6b8629fb0837",
+                          "type": "group",
+                          "attributes": {
+                            "name": "Foundation Stock Service"
+                          },
+                          "relationships": {
+                            "groups": {
+                              "data": [
+                                {
+                                  "id": "b0b6810c-fb88-4987-ad0a-ae0440b04634",
+                                  "type": "group"
+                                },
+                                {
+                                  "id": "38e06144-2ac3-43c0-981c-f8598eabc902",
+                                  "type": "group"
+                                }
+                              ]
+                            }
+                          }
+                        },
+                        {
+                          "id": "256db247-70ce-4f08-b6a6-60b27ce369d1",
+                          "type": "group",
+                          "attributes": {
+                            "name": "Herding Group"
+                          },
+                          "relationships": {
+                            "groups": {
+                              "data": [
+                                {
+                                  "id": "85d5a702-057f-42e3-a24c-b56e0aa94bf9",
+                                  "type": "group"
+                                },
+                                {
+                                  "id": "eef99f80-266a-4659-a1e7-3af639010984",
+                                  "type": "group"
+                                }
+                              ]
+                            }
+                          }
+                        }
+                      ],
+                      "links": {
+                        "self": "https://dogapi.dog/api/v2/groups",
+                        "current": "https://dogapi.dog/api/v2/groups?page[number]=1",
+                        "next": "https://dogapi.dog/api/v2/groups?page[number]=2",
+                        "last": "https://dogapi.dog/api/v2/groups?page[number]=2"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/groups/{id}": {
+      "get": {
+        "summary": "get group",
+        "tags": [
+          "Groups"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful",
+            "content": {
+              "application/json": {
+                "examples": {
+                  "example": {
+                    "value": {
+                      "data": {
+                        "id": "02124eb6-1baa-410c-90ea-6b8629fb0837",
+                        "type": "group",
+                        "attributes": {
+                          "name": "Foundation Stock Service"
+                        },
+                        "relationships": {
+                          "groups": {
+                            "data": [
+                              {
+                                "id": "b0b6810c-fb88-4987-ad0a-ae0440b04634",
+                                "type": "group"
+                              },
+                              {
+                                "id": "4bc90a09-5406-4739-96c6-ac2161fbfa4e",
+                                "type": "group"
+                              }
+                            ]
+                          }
+                        }
+                      },
+                      "links": {
+                        "self": "https://dogapi.dog/api/v2/groups/02124eb6-1baa-410c-90ea-6b8629fb0837"
+                      }
                     }
                   }
                 }
